openturns/1.23/_sources/auto_probabilistic_modeling/distributions/plot_conditional_distribution.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_probabilistic_modeling/distributions/plot_conditional_distribution.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_probabilistic_modeling_distributions_plot_conditional_distribution.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_probabilistic_modeling_distributions_plot_conditional_distribution.py:


Create a conditional distribution
=================================

.. GENERATED FROM PYTHON SOURCE LINES 8-18

In this example we are going to build the distribution of the random vector X conditioned by the random variable Theta

.. math::
   \underline{X}|\underline{\Theta}

with Theta obtained with the random variable Y through a function f

.. math::
   \underline{\Theta}=f(\underline{Y})


.. GENERATED FROM PYTHON SOURCE LINES 20-24

.. code-block:: Python

    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt








.. GENERATED FROM PYTHON SOURCE LINES 25-26

create the Y distribution

.. GENERATED FROM PYTHON SOURCE LINES 26-28

.. code-block:: Python

    YDist = ot.Uniform(-1.0, 1.0)








.. GENERATED FROM PYTHON SOURCE LINES 29-30

create Theta=f(y)

.. GENERATED FROM PYTHON SOURCE LINES 30-32

.. code-block:: Python

    f = ot.SymbolicFunction(["y"], ["y", "1+y^2"])








.. GENERATED FROM PYTHON SOURCE LINES 33-34

create the X|Theta distribution

.. GENERATED FROM PYTHON SOURCE LINES 34-36

.. code-block:: Python

    XgivenThetaDist = ot.Uniform()








.. GENERATED FROM PYTHON SOURCE LINES 37-38

create the distribution

.. GENERATED FROM PYTHON SOURCE LINES 38-42

.. code-block:: Python

    XDist = ot.ConditionalDistribution(XgivenThetaDist, YDist, f)
    XDist.setDescription(["X|Theta=f(y)"])
    XDist






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    ConditionalDistribution
    <ul>
      <li>name=ConditionalDistribution</li>
      <li>dimension=1</li>
      <li>weight=1</li>
      <li>range=[-0.999956, 1.99991]</li>
      <li>description=[X|Theta=f(y)]</li>
      <li>isParallel=true</li>
      <li>isCopula=false</li>
    </ul>

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 43-44

Get a sample

.. GENERATED FROM PYTHON SOURCE LINES 44-46

.. code-block:: Python

    XDist.getSample(5)






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <table>
      <tr><td></td><th>X|Theta=f(y)</th></tr>
      <tr><th>0</th><td>1.431419</td></tr>
      <tr><th>1</th><td>1.072163</td></tr>
      <tr><th>2</th><td>0.362335</td></tr>
      <tr><th>3</th><td>0.1600886</td></tr>
      <tr><th>4</th><td>1.028835</td></tr>
    </table>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 47-48

draw PDF

.. GENERATED FROM PYTHON SOURCE LINES 48-51

.. code-block:: Python

    graph = XDist.drawPDF()
    view = viewer.View(graph)
    plt.show()



.. image-sg:: /auto_probabilistic_modeling/distributions/images/sphx_glr_plot_conditional_distribution_001.png
   :alt: plot conditional distribution
   :srcset: /auto_probabilistic_modeling/distributions/images/sphx_glr_plot_conditional_distribution_001.png
   :class: sphx-glr-single-img






.. _sphx_glr_download_auto_probabilistic_modeling_distributions_plot_conditional_distribution.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_conditional_distribution.ipynb <plot_conditional_distribution.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_conditional_distribution.py <plot_conditional_distribution.py>`
